...
                                    <constraint firstAttribute="height" constant="45" id="Myf-i0-rUc"/>
                                </constraints>
                                <state key="normal" title="Submit">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="956 321 9876" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lkp-wN-ZM6">
                                                <rect key="frame" x="131.5" y="504" width="112" height="30"/>
                                                <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="$15/hour" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lTf-8c-Hzn">
                                                <rect key="frame" x="41" y="336" width="128" height="30"/>
                                                <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Handy Men" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7by-Ho-D85">
                                                <rect key="frame" x="201" y="337" width="145" height="30"/>
                                                <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What type of service offer?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vLH-dv-cMN">
                                                <rect key="frame" x="82" y="46" width="211" height="21"/>
                                                <constraints>
...
        <scene sceneID="tMP-gO-bab">
            <objects>
                <viewController title="Feed" id="HHC-b8-qDK" customClass="ClientFeedViewController" customModule="servicely" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="0xN-03-xID">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                    </view>
                    <navigationItem key="navigationItem" id="p4K-Tw-bDV">
                        <barButtonItem key="rightBarButtonItem" title="Post" id="LJf-Zd-gk9">
                            <connections>
                                <segue destination="pZl-Ky-91X" kind="show" id="Lir-cw-YDj"/>
...
                                <rect key="frame" x="0.0" y="64" width="375" height="99"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Settings" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gDy-aZ-kLX">
                                        <rect key="frame" x="130.5" y="31.5" width="114" height="36"/>
                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="30"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Sign Out" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="5uB-wa-wQi">
                                                    <rect key="frame" x="16" y="0.0" width="324" height="43.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
