...
        // if user wants first item in pickerview and doesn't need to scroll, no
        // item will be selected
        serviceTypePickerView.selectRow(0, inComponent: 0, animated: false)
        serviceType = pickerViewData[0]
        
        
        savedLabel.text = "Getting city location... Please wait"
        
        locationManager = CLLocationManager()
        self.isAuthorizedtoGetUserLocation()
        if CLLocationManager.locationServicesEnabled() {
            locationManager.delegate = self
            locationManager.desiredAccuracy = kCLLocationAccuracyNearestTenMeters
...
        geoFire?.setLocation(CLLocation(latitude: self.latitude!, longitude: self.longitude!), forKey: postID.key) { (error) in
            if (error != nil) {
                self.savedLabel.text = "Error - not saved"

                print("An error occured: \(error)")
            } else {
                self.savedLabel.text = "saved!"

                print("Saved location successfully!")
            }
        }
        
        //savedLabel.text = "saved!"
...
